# discourse-api-rs

./: Cargo.toml  Makefile  shell.nix
.github/workflows/: release.yml
examples/: fetch_latest.rs  test_chat.rs  test_write_operations.rs
src/: client.rs  error.rs  lib.rs  types.rs  wasm.rs
