[package]
name = "discourse-api-rs"
version = "20251117.0.0"
edition = "2021"
authors = ["Jake Goldsborough"]
description = "Rust client for the Discourse API"
license = "MIT"
repository = "https://github.com/ducks/discourse-api-rs"
keywords = ["discourse", "api", "client", "forum", "rust"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
