[package]
name = "discourse-api-rs"
version = "20251117.0.0"
edition = "2021"
authors = ["Jake Goldsborough"]
description = "Rust client for the Discourse API"
license = "MIT"
repository = "https://github.com/ducks/discourse-api-rs"
keywords = ["discourse", "api", "client", "forum", "rust"]
categories = ["api-bindings", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "serde-wasm-bindgen", "getrandom/js"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
